fix(ui): disable 24hr forecast animation on mobile
prevent the heading and section-divider from "popping up" when scrolling
down, animation is now completely disabled instead

fixes #20

--- a/src/assets/styles/weather.css
+++ b/src/assets/styles/weather.css
@@ -306,7 +306,7 @@ footer .link:hover {
     animation-range-end: cover 20%;
   }
   .forecast-today .section-divider, .forecast-today .heading::before {
-    animation-range-start: cover 0%;
+    animation-range-start: cover -1%;
     animation-range-end: cover 0%;
   }
   .title {
